# generative_recommendation

./: .gitignore  README.md  SKILL.md  dedicated_readout_token_design.md  experiment_results.md  pyproject.toml  tasks.md
examples/: build_semantic_ids_mgcl.py  build_semantic_ids_rich.py  demo_compare.py  demo_tiger_flow.py  dry_run_eval.py  run_all_experiments.py  run_steam_convergence.py  train_full_movielens.py  train_hstu.py  train_hstu_flow.py  train_hstu_flow_ce.py  train_hstu_flow_joint.py  train_hstu_flow_t5_vae.py  train_readout_hstu.py  train_rqkmeans.py  train_rqvae.py  train_tiger.py  train_tiger_cot.py  train_tiger_encoder_ce.py  train_tiger_flow.py  train_tiger_flow_vae.py  train_tiger_joint.py  train_tiger_rl_cot.py  train_tiger_seq2seq.py  train_tiger_seq2seq_joint.py
scripts/: generate_random_semantic_ids.py  generate_steam_t5_embeddings.py  run_existing_tpu.sh  run_on_gce.sh  run_on_tpu.sh  run_tiger_ablation.sh  tpu_experiments.sh
src/datasets/: __init__.py  amazon.py  base.py  embeddings.py  movielens.py  steam.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  tiger_decode.py  training_utils.py
src/generative_recommendation/: __init__.py
src/models/: hstu.py  hstu_flow.py  readout_hstu.py  rqvae.py  tiger_cot.py  tiger_encoder_ce.py  tiger_flow.py  tiger_joint.py  tiger_model.py  tiger_rl_cot.py  tiger_seq2seq.py  tiger_tokenization.py  transformer.py
tests/: __init__.py  test_datasets.py  test_hstu.py  test_metrics.py  test_rqvae.py  test_steam.py  test_tiger.py  test_tiger_joint.py  test_tiger_seq2seq.py
(+4 files in other folders)
